<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.ejercicios17.Actividad4">

    <TextView
        android:id="@+id/textIntroduceDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/introduceDatos"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_below="@+id/textIntroduceDatos"
        android:layout_marginTop="30px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewNombre"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/editTextNombre"
        android:layout_below="@+id/textIntroduceDatos"
        android:layout_toEndOf="@id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textViewApellidos"
        android:layout_below="@+id/textViewNombre"
        android:layout_marginTop="60px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewApellidos"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_below="@+id/editTextNombre"
        android:layout_toEndOf="@id/textViewApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_below="@+id/textViewApellidos"
        android:layout_marginTop="60px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSexo"
        android:textSize="20dp"/>

    <RadioGroup
        android:id="@+id/radioGroupSexo"
        android:layout_below="@+id/editTextApellidos"
        android:layout_toEndOf="@+id/textViewSexo"
        android:layout_marginTop="40px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:textSize="20dp"/>
        <RadioButton
            android:id="@+id/radioButtonFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:textSize="20dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewAfiones"
        android:layout_below="@+id/radioGroupSexo"
        android:layout_marginTop="50px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAficiones"
        android:textSize="20dp"/>

    <CheckBox
        android:id="@+id/checkBoxMusica"
        android:layout_below="@+id/radioGroupSexo"
        android:layout_toEndOf="@+id/textViewAfiones"
        android:layout_marginTop="40px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musica"
        android:textSize="20dp"/>
    <CheckBox
        android:id="@+id/checkBoxLectura"
        android:layout_below="@+id/checkBoxMusica"
        android:layout_toEndOf="@+id/textViewAfiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lectura"
        android:textSize="20dp"/>
    <CheckBox
        android:id="@+id/checkBoxDeportes"
        android:layout_below="@+id/checkBoxLectura"
        android:layout_toEndOf="@+id/textViewAfiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deportes"
        android:textSize="20dp"/>
    <CheckBox
        android:id="@+id/checkBoxViajar"
        android:layout_below="@+id/checkBoxDeportes"
        android:layout_toRightOf="@+id/textViewAfiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viajar"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/buttonEnviar"
        android:layout_below="@+id/checkBoxViajar"
        android:layout_marginTop="25px"
        android:onClick="enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:textSize="20dp"/>
</RelativeLayout>
