<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.ejercicios17.Actividad2">

    <TextView
        android:id="@+id/textViewConectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/textViewConectar"
        android:textSize="27dp"/>

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_below="@+id/textViewConectar"
        android:layout_marginTop="150px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewUsuario"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_below="@id/textViewUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewContrasena"
        android:layout_below="@id/editTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewContrasena"
        android:layout_marginTop="10dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/editTextContrasena"
        android:inputType="textPassword"
        android:layout_below="@id/textViewContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_below="@+id/editTextContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciarSesion"
        android:onClick="iniciarSesion"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewOlvidadesteContrasena"
        android:layout_below="@id/buttonIniciarSesion"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidarContrasena"
        android:layout_marginTop="10dp"
        android:textSize="20dp"/>
</RelativeLayout>