<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.ejercicios17.Actividad3">

    <TextView
        android:id="@+id/textViewSuma"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/suma"
        android:textSize="32dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSuma"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50px">

    <EditText
        android:id="@+id/editTextNum1"
        android:layout_width="150px"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:inputType="number"
        android:enabled="false"/>

    <TextView
        android:id="@+id/textViewOpeSuma"
        android:layout_toEndOf="@id/editTextNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opeSuma"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/editTextNum2"
        android:layout_toEndOf="@id/textViewOpeSuma"
        android:layout_width="150px"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:inputType="number"
        android:enabled="false"/>

    <TextView
        android:id="@+id/textViewOpeIgual"
        android:layout_toEndOf="@id/editTextNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opeIgual"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/editTextResultado"
        android:layout_toEndOf="@id/textViewOpeIgual"
        android:layout_width="150px"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:inputType="number"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonComprobarResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout"
        android:text="@string/comprobarResultado"
        android:layout_marginTop="50px"
        android:onClick="calcular"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textPregunCorrectas"
        android:layout_below="@+id/buttonComprobarResultado"
        android:layout_marginTop="50px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunCorrectas"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textRespuCorrectas"
        android:layout_below="@+id/buttonComprobarResultado"
        android:layout_toEndOf="@id/textPregunCorrectas"
        android:layout_marginTop="50px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuCorrectas"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textPregunIncorrectas"
        android:layout_below="@+id/buttonComprobarResultado"
        android:layout_toEndOf="@id/textRespuCorrectas"
        android:layout_marginTop="50px"
        android:layout_marginLeft="30px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunInorrectas"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textRespuIncorrecta"
        android:layout_below="@+id/buttonComprobarResultado"
        android:layout_toEndOf="@id/textPregunIncorrectas"
        android:layout_marginTop="50px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuCorrectas"
        android:textSize="16dp"/>
</RelativeLayout>
